# qge

./: .gitignore  DATA.md  README.md  pyproject.toml
cdp/: README.md  pyproject.toml
cdp/data/inputs/cdp_2000/: bilateral_trade.parquet  gross_output.parquet  io_coefficients.parquet  sectoral_dispersion.parquet  structures_share.parquet  value_added_share.parquet
cdp/qge/: counterfactual_dynamics.py  dynamic.py  dynamic_helpers.py  effects.py  forward_dynamics.py  helpers.py  io.py  labels.py  reports.py
cdp/qge/models/: base_year.py  baseline_economy.py  counterfactual.py  dynamic_baseline.py  forward_simulation.py
cdp/scripts/: convert_cdp_txt.py
cdp/tests/: conftest.py  test_base_year.py  test_counterfactual.py  test_dynamic_step1.py  test_dynamic_step2.py  test_dynamic_step3.py  test_dynamic_step4.py  test_effects.py  test_reports.py
cprhs/: DATA.md
cprhs/qge/: __init__.py  io.py
cprhs/scripts/: add_icio_row.py  counterfactual_alberta.py  expand_icio_partners.py
cprhs/tests/: conftest.py  test_applications.py  test_benchmark_shocks.py  test_elasticities.py  test_fixtures.py  test_reporting.py  test_variants_baseline.py
data/inputs/canada_2019/: bilateral_trade.parquet  employment.parquet  final_demand_share.parquet  io_matrix.parquet  (+3 more)
qge/: applications.py  elasticities.py  geographic.py  helpers.py  io.py
qge/models/: benchmark.py  variants.py
scripts/: build_canada_iot.py  convert_cprhs.py  convert_statcan.py
tests/: test_benchmark_baseline.py  test_fixtures.py  test_geographic.py  test_parquet_io.py  test_variants_baseline.py
(+28 files in other folders)
