[project]
name = "qge"
version = "0.1.0"
description = "Python translation of the CPRHS (2017) quantitative general-equilibrium model."
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pandas>=2.0",
    "pyarrow>=15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
