[project]
name = "qge-cdp"
version = "0.0.0"
description = "Python translation of the Caliendo-Dvorkin-Parro dynamic trade model."
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pandas>=2.0",
    "pyarrow>=15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect by default; run with --runslow or -m slow)",
]
